feat: add findByEamil in userModule
